# surebets-finder

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
surebets_finder/: __init__.py  bootstrap.py  cli.py  logger.py  main.py
surebets_finder/bet/application/: bet_finder.py  bet_finder_factory.py  importer.py  sure_bets_finder.py
surebets_finder/bet/domain/: entities.py  errors.py  repositories.py  value_objects.py
surebets_finder/bet/infrastructure/: mongodb_bet_repo.py  mongodb_sure_bet_repo.py
surebets_finder/examples/: betclick.json  efortuna.html  lvbet.json
surebets_finder/raw_content/: facade.py
surebets_finder/raw_content/aplication/: importer.py  url_factory.py  url_strategy.py
surebets_finder/raw_content/aplication/clients/: betclick_client.py  client.py  lvbet_client.py  (+1 more)
surebets_finder/raw_content/domain/: entities.py  errors.py  repositories.py
surebets_finder/raw_content/infrastructure/: mongodb_raw_content_repo.py
surebets_finder/shared/: category.py  provider.py  reflection.py  serializers.py
tests/: conftest.py  test_surebets_finder.py
tests/bet/application/: test_bet_finder_factory.py  test_finders.py
tests/bet/domain/: test_bet_entitiy.py
tests/bet/infrastructure/: test_mongodb_bet_repo.py
tests/integration/: test_raw_content_clients.py
tests/raw_content/aplication/: test_url_factory.py  test_url_strategy.py
tests/raw_content/domain/: test_raw_content_entitiy.py
tests/raw_content/infrastructure/: test_mongodb_raw_content_repo.py
tests/shared/: test_reflection.py
