[tool.poetry]
name = "surebets-finder"
version = "0.1.0"
description = ""
authors = ["Szymon Miks <szymon.miks@netguru.com>", "Jan Bińkowski <jan.binkowski96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^3.11.2"
bson = "^0.5.10"
kink = "^0.3.6"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
click = "^7.1.2"
selenium = "^3.141.0"
webdriver_manager = "^3.2.2"
pytz = "^2020.5"
sympy = "^1.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
mypy = "^0.790"
pre-commit = "^2.9.3"
isort = "^5.7.0"
flake8 = "^3.8.4"
pytest-cov = "^2.11.0"

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.poetry.scripts]
surebets_finder = "surebets_finder.cli:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
